# ukrainian-keyboard-fixer

./: README.md
.github/workflows/: release.yml
.lovable/: plan.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: layout.rs  main.rs  settings.rs
