[package]
name = "raskladka-fix"
version = "0.1.0"
description = "Конвертація розкладки QWERTY ↔ ЙЦУКЕН гарячою клавішею"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"

# Force alloc-no-stdlib to v3 across the whole graph.
# brotli 8.x uses the v3 `Allocator` trait, but without a direct constraint
# Cargo can pick v2 for some dependents, mixing trait definitions and
# producing E0277 "StandardAlloc does not implement Allocator<T>" errors.
alloc-no-stdlib = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true