[package]
name = "raskladka-fix"
version = "0.1.0"
description = "Конвертація розкладки QWERTY ↔ ЙЦУКЕН гарячою клавішею"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"

# Force alloc-no-stdlib to v2 across the whole graph.
# brotli 8.0.3 hard-requires `^2.0`, but brotli-decompressor 5.0.2 accepts
# `>=2.0.4, <4`. Without a direct constraint Cargo picks v3 for the
# decompressor and v2 for brotli, producing two distinct `Allocator` traits
# and `StandardAlloc` types — hence E0277 mismatches in brotli's
# combined_alloc.rs. Pinning to ^2 unifies the graph.
alloc-no-stdlib = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true