[package]
name = "raskladka-fix"
version = "0.1.0"
description = "Конвертація розкладки QWERTY ↔ ЙЦУКЕН гарячою клавішею"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"

# --- Brotli dependency graph lock ---
# brotli 8.0.3 hard-requires alloc-no-stdlib ^2.0, but brotli-decompressor 5.0.2
# widened its range to `>=2.0.4, <4`. Cargo's resolver then picks v3 for the
# decompressor and v2 for brotli, producing two incompatible `Allocator`
# traits and `StandardAlloc` types — visible as repeated E0277 errors in
# brotli's combined_alloc.rs.
#
# We force the entire brotli stack onto a single, consistent set of versions
# that all use alloc-no-stdlib v2. These three exact pins must stay in sync.
brotli = "=8.0.3"
brotli-decompressor = "=5.0.1"
alloc-no-stdlib = "=2.0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true